force-app/main/default/objects/Rule_General__c/Rule_General__c.object-meta.xml
<CustomObject>
    <label>Rule General</label>
    <nameField>
        <displayFormat>RG-{000000000}</displayFormat>
        <label>Rule General ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rules General</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>