force-app/main/default/objects/Rule_General__c/fields/Fixed_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Adjustment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fixed Adjustment</label>
    <type>Checkbox</type>
</CustomField>