force-app/main/default/objects/Rule_General__c/fields/price_change__c.field-meta.xml
<CustomField>
    <fullName>price_change__c</fullName>
    <label>price_change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>