force-app/main/default/objects/Rule_General__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Rule_Type__c</columns>
    <columns>Fixed_Adjustment__c</columns>
    <columns>Name__c</columns>
    <columns>Adjustment_Amount__c</columns>
    <columns>Adjustment_Percent__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>